[project]
name = "tcap-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "polars",
    "pandas",
    "scikit-learn",
    "scikit-survival",
    "torch",
    "torchvision"
]

[tool.uv.sources]
torch = {index = "pytorch-cu130"}
torchvision = {index = "pytorch-cu130"}

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true